src/main/kotlin/com/example/dorm/query/parser/OQLParser.java
// Generated from /Users/andreasernst/projects/demo/src/main/kotlin/com/example/demo/OQL.g4 by ANTLR 4.13.1

package com.example.dorm.query.parser;
/**
 * @COPYRIGHT (C) 2024 Andreas ErnstX
 *
 * All rights reserved
 */

import com.example.dorm.query.QueryManager;
import com.example.dorm.query.Query;
import com.example.dorm.DataObject;
import com.example.dorm.model.ObjectDescriptor;
import com.example.dorm.query.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class OQLParser extends com.example.dorm.query.parser.AbstractQueryParser {
    static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9,
            T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17,
            T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24,
            T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31,
            T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38,
            T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45,
            T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52,
            T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59,
            T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66,
            T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, IDENTIFICATION_VARIABLE=72,
            NUMBER=73, CHARACTER=74, STRINGLITERAL=75, ESCAPE_CHARACTER=76, WS=77,
            TRIM_CHARACTER=78;
    public static final int
            RULE_file = 0, RULE_statement = 1, RULE_select_statement = 2, RULE_update_statement = 3,
            RULE_delete_statement = 4, RULE_from_clause = 5, RULE_identification_variable_declaration = 6,
            RULE_range_variable_declaration = 7, RULE_join = 8, RULE_fetch_join = 9,
            RULE_join_spec = 10, RULE_join_association_path_expression = 11, RULE_join_collection_valued_path_expression = 12,
            RULE_join_single_valued_association_path_expression = 13, RULE_collection_member_declaration = 14,
            RULE_single_valued_path_expression = 15, RULE_state_field_path_expression = 16,
            RULE_single_valued_association_path_expression = 17, RULE_collection_valued_path_expression = 18,
            RULE_state_field = 19, RULE_update_clause = 20, RULE_update_item = 21,
            RULE_new_value = 22, RULE_delete_clause = 23, RULE_select_clause = 24,
            RULE_select_expression = 25, RULE_constructor_expression = 26, RULE_constructor_item = 27,
            RULE_aggregate_expression = 28, RULE_where_clause = 29, RULE_groupby_clause = 30,
            RULE_groupby_item = 31, RULE_having_clause = 32, RULE_orderby_clause = 33,
            RULE_orderby_item = 34, RULE_subquery = 35, RULE_subquery_from_clause = 36,
            RULE_subselect_identification_variable_declaration = 37, RULE_association_path_expression = 38,
            RULE_simple_select_clause = 39, RULE_simple_select_expression = 40, RULE_conditional_expression = 41,
            RULE_conditional_term = 42, RULE_conditional_factor = 43, RULE_conditional_primary = 44,
            RULE_simple_cond_expression = 45, RULE_between_expression = 46, RULE_in_expression = 47,
            RULE_in_item = 48, RULE_like_expression = 49, RULE_null_comparison_expression = 50,
            RULE_empty_collection_comparison_expression = 51, RULE_collection_member_expression = 52,
            RULE_exists_expression = 53, RULE_all_or_any_expression = 54, RULE_comparison_expression = 55,
            RULE_comparison_operator = 56, RULE_arithmetic_expression = 57, RULE_simple_arithmetic_expression = 58,
            RULE_arithmetic_term = 59, RULE_arithmetic_factor = 60, RULE_arithmetic_primary = 61,
            RULE_string_expression = 62, RULE_string_primary = 63, RULE_datetime_expression = 64,
            RULE_datetime_primary = 65, RULE_boolean_expression = 66, RULE_boolean_primary = 67,
            RULE_enum_expression = 68, RULE_enum_primary = 69, RULE_entity_expression = 70,
            RULE_simple_entity_expression = 71, RULE_functions_returning_numerics = 72,
            RULE_functions_returning_datetime = 73, RULE_functions_returning_strings = 74,
            RULE_trim_specification = 75, RULE_numeric_literal = 76, RULE_pattern_value = 77,
            RULE_input_parameter = 78, RULE_literal = 79, RULE_constructor_name = 80,
            RULE_enum_literal = 81, RULE_boolean_literal = 82, RULE_simple_state_field = 83,
            RULE_embedded_class_state_field = 84, RULE_single_valued_association_field = 85,
            RULE_collection_valued_association_field = 86, RULE_abstract_schema_name = 87,
            RULE_leg = 88;
    private static String[] makeRuleNames() {
        return new String[] {
                "file", "statement", "select_statement", "update_statement", "delete_statement",
                "from_clause", "identification_variable_declaration", "range_variable_declaration",
                "join", "fetch_join", "join_spec", "join_association_path_expression",
                "join_collection_valued_path_expression", "join_single_valued_association_path_expression",
                "collection_member_declaration", "single_valued_path_expression", "state_field_path_expression",
                "single_valued_association_path_expression", "collection_valued_path_expression",
                "state_field", "update_clause", "update_item", "new_value", "delete_clause",
                "select_clause", "select_expression", "constructor_expression", "constructor_item",
                "aggregate_expression", "where_clause", "groupby_clause", "groupby_item",
                "having_clause", "orderby_clause", "orderby_item", "subquery", "subquery_from_clause",
                "subselect_identification_variable_declaration", "association_path_expression",
                "simple_select_clause", "simple_select_expression", "conditional_expression",
                "conditional_term", "conditional_factor", "conditional_primary", "simple_cond_expression",
                "between_expression", "in_expression", "in_item", "like_expression",
                "null_comparison_expression", "empty_collection_comparison_expression",
                "collection_member_expression", "exists_expression", "all_or_any_expression",
                "comparison_expression", "comparison_operator", "arithmetic_expression",
                "simple_arithmetic_expression", "arithmetic_term", "arithmetic_factor",
                "arithmetic_primary", "string_expression", "string_primary", "datetime_expression",
                "datetime_primary", "boolean_expression", "boolean_primary", "enum_expression",
                "enum_primary", "entity_expression", "simple_entity_expression", "functions_returning_numerics",
                "functions_returning_datetime", "functions_returning_strings", "trim_specification",
                "numeric_literal", "pattern_value", "input_parameter", "literal", "constructor_name",
                "enum_literal", "boolean_literal", "simple_state_field", "embedded_class_state_field",
                "single_valued_association_field", "collection_valued_association_field",
                "abstract_schema_name", "leg"
        };
    }
    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[] {
                null, "'FROM'", "'AS'", "'FETCH'", "'LEFT'", "'OUTER'", "'INNER'", "'JOIN'",
                "'.'", "'IN'", "'('", "')'", "'UPDATE'", "'SET'", "','", "'='", "'NULL'",
                "'DELETE'", "'SELECT'", "'DISTINCT'", "'NEW'", "'AVG'", "'MAX'", "'MIN'",
                "'SUM'", "'COUNT'", "'WHERE'", "'GROUP'", "'BY'", "'HAVING'", "'ORDER'",
                "'ASC'", "'DESC'", "'OR'", "'AND'", "'NOT'", "'BETWEEN'", "'LIKE'", "'ESCAPE'",
                "'IS'", "'EMPTY'", "'MEMBER'", "'OF'", "'EXISTS'", "'ALL'", "'ANY'",
                "'SOME'", "'>'", "'>='", "'<'", "'<='", "'<>'", "'LENGTH'", "'LOCATE'",
                "'ABS'", "'SQRT'", "'MOD'", "'SIZE'", "'CURRENT_DATE'", "'CURRENT_TIME'",
                "'CURRENT_TIMESTAMP'", "'CONCAT'", "'SUBSTRING'", "'TRIM'", "'LOWER'",
                "'UPPER'", "'LEADING'", "'TRAILING'", "'BOTH'", "':'", "'true'", "'false'"
        };
    }
    private static final String[] _LITERAL_NAMES = makeLiteralNames();
    private static String[] makeSymbolicNames() {
        return new String[] {
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, null, null,
                "IDENTIFICATION_VARIABLE", "NUMBER", "CHARACTER", "STRINGLITERAL", "ESCAPE_CHARACTER",
                "WS", "TRIM_CHARACTER"
        };
    }
    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() { return "OQL.g4"; }

    @Override
    public String[] getRuleNames() { return ruleNames; }

    @Override
    public String getSerializedATN() { return _serializedATN; }

    @Override
    public ATN getATN() { return _ATN; }

    public OQLParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
    }

    @SuppressWarnings("CheckReturnValue")
    public static class FileContext extends ParserRuleContext {
        public StatementContext statement() {
            return getRuleContext(StatementContext.class,0);
        }
        public TerminalNode EOF() { return getToken(OQLParser.EOF, 0); }
        public FileContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_file; }
    }

    public final FileContext file() throws RecognitionException {
        FileContext _localctx = new FileContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_file);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(178);
                statement();
                setState(179);
                match(EOF);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class StatementContext extends ParserRuleContext {
        public Select_statementContext select_statement() {
            return getRuleContext(Select_statementContext.class,0);
        }
        public StatementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_statement; }
    }

    public final StatementContext statement() throws RecognitionException {
        StatementContext _localctx = new StatementContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_statement);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(181);
                select_statement();
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class Select_statementContext extends ParserRuleContext {
        public Select_clauseContext select_clause;
        public From_clauseContext from_clause;
        public Where_clauseContext where_clause;
        public Select_clauseContext select_clause() {
            return getRuleContext(Select_clauseContext.class,0);
        }
        public From_clauseContext from_clause() {
            return getRuleContext(From_clauseContext.class,0);
        }
        public Where_clauseContext where_clause() {
            return getRuleContext(Where_clauseContext.class,0);
        }
        public Select_statementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_select_statement; }
    }

    public final Select_statementContext select_statement() throws RecognitionException {
        Select_statementContext _localctx = new Select_statementContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_select_statement);
        select = new SELECT();
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(183);
                ((Select_statementContext)_localctx).select_clause = select_clause();
                select.select = ((Select_statementContext)_localctx).select_clause.select;
                setState(185);
                ((Select_statementContext)_localctx).from_clause = from_clause();
                select.from = ((Select_statementContext)_localctx).from_clause.from;
                setState(190);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la==T__25) {
                    {
                        setState(187);
                        ((Select_statementContext)_localctx).where_clause = where_clause();
                        select.where = ((Select_statementContext)_localctx).where_clause.condition;
                    }
                }

            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class Update_statementContext extends ParserRuleContext {
        public Update_clauseContext update_clause() {
            return getRuleContext(Update_clauseContext.class,0);
        }
        public Where_clauseContext where_clause() {
            return getRuleContext(Where_clauseContext.class,0);
        }
        public Update_statementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_update_statement; }
    }

    public final Update_statementContext update_statement() throws RecognitionException {
        Update_statementContext _localctx = new Update_statementContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_update_statement);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(192);
                update_clause();
                setState(194);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la==T__25) {
                    {
                        setState(193);
                        where_clause();
                    }
                }

            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class Delete_statementContext extends ParserRuleContext {
        public Delete_clauseContext delete_clause() {
            return getRuleContext(Delete_clauseContext.class,0);
        }
        public Where_clauseContext where_clause() {
            return getRuleContext(Where_clauseContext.class,0);
        }
        public Delete_statementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_delete_statement; }
    }

    public final Delete_statementContext delete_statement() throws RecognitionException {
        Delete_statementContext _localctx = new Delete_statementContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_delete_statement);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(196);
                delete_clause();
                setState(198);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la==T__25) {
                    {
                        setState(197);
                        where_clause();
                    }
                }

            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class From_clauseContext extends ParserRuleContext {
        public FROM_ALIAS from;
        public Identification_variable_declarationContext identification_variable_declaration;
        public Identification_variable_declarationContext identification_variable_declaration() {
            return getRuleContext(Identification_variable_declarationContext.class,0);
        }
        public From_clauseContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_from_clause; }
    }

    public final From_clauseContext from_clause() throws RecognitionException {
        From_clauseContext _localctx = new From_clauseContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_from_clause);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(200);
                match(T__0);
                setState(201);
                ((From_clauseContext)_localctx).identification_variable_declaration = identification_variable_declaration();
                ((From_clauseContext)_localctx).from =  ((From_clauseContext)_localctx).identification_variable_declaration.from;
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class Identification_variable_declarationContext extends ParserRuleContext {
        public FROM_ALIAS from;
        public Range_variable_declarationContext range_variable_declaration;
        public Range_variable_declarationContext range_variable_declaration() {
            return getRuleContext(Range_variable_declarationContext.class,0);
        }
        public Identification_variable_declarationContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_identification_variable_declaration; }
    }

    public final Identification_variable_declarationContext identification_variable_declaration() throws RecognitionException {
        Identification_variable_declarationContext _localctx = new Identification_variable_declarationContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_identification_variable_declaration);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(204);
                ((Identification_variable_declarationContext)_localctx).range_variable_declaration = range_variable_declaration();
                ((Identification_variable_declarationContext)_localctx).from =  ((Identification_variable_declarationContext)_localctx).range_variable_declaration.from;
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class Range_variable_declarationContext extends ParserRuleContext {
        public FROM_ALIAS from;
        public Abstract_schema_nameContext abstract_schema_name;
        public Token IDENTIFICATION_VARIABLE;
        public Abstract_schema_nameContext abstract_schema_name() {
            return getRuleContext(Abstract_schema_nameContext.class,0);
        }
        public TerminalNode IDENTIFICATION_VARIABLE() { return getToken(OQLParser.IDENTIFICATION_VARIABLE, 0); }
        public Range_variable_declarationContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_range_variable_declaration; }
    }

    public final Range_variable_declarationContext range_variable_declaration() throws RecognitionException {
        Range_variable_declarationContext _localctx = new Range_variable_declarationContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_range_variable_declaration);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(207);
                ((Range_variable_declarationContext)_localctx).abstract_schema_name = abstract_schema_name();
                setState(209);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la==T__1) {
                    {
                        setState(208);
                        match(T__1);
                    }
                }
